--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ compiler:
  - gcc
 
 before_install:
- - QT_PPA=beineri/opt-qt561-trusty QT_VERSION=56
- - sudo apt-add-repository -y ppa:${QT_PPA}
- - sudo apt-get update
- - sudo apt-get install -y qt${QT_VERSION}base qt${QT_VERSION}declarative
+ - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+ - sudo apt-get update -qq
+ - sudo apt-get install qtbase5-dev
+ - #sudo apt-get install qt5-default
+ - sudo apt-get install qtdeclarative5-dev
+ - sudo apt-get install libqt5webkit5-dev 
+ - sudo apt-get install qttools5-dev-tools
 
 script:
  - source /opt/qt${QT_VERSION}/bin/qt${QT_VERSION}-env.sh
