--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
 
 before_install:
  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
- - sudo apt-get update -qq
+ - sudo apt-get update -q
  - sudo apt-get install qtbase5-dev
  - #sudo apt-get install qt5-default
  - sudo apt-get install qtdeclarative5-dev
