--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ compiler:
  - gcc
 
 before_install:
- - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+ - sudo add-apt-repository -y ppa:beineri/opt-qt561-trusty
  - sudo apt-get update -q
+ - sudo apt-get -y install qt56declarative qt56quickcontrols qt56tools 
  - sudo apt-get install ubuntu-sdk
 
 script:
