--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ before_install:
 
 script:
  - source /opt/qt${QT_VERSION}/bin/qt${QT_VERSION}-env.sh
- - qmake mosaic_all.pro -r QMAKE_CC=$CC QMAKE_CXX=$CXX
+ - mkdir build
+ - cd build
+ - qmake mosaic_all.pro -r QMAKE_CC=$CC QMAKE_CXX=$CXX ../
  - make -j2
  - make check
