--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ script:
  - source /opt/qt${QT_VERSION}/bin/qt${QT_VERSION}-env.sh
  - mkdir build
  - cd build
- - qmake mosaic_all.pro -r QMAKE_CC=$CC QMAKE_CXX=$CXX ../
+ - qmake -r QMAKE_CC=$CC QMAKE_CXX=$CXX ../mosaic_all.pro
  - make -j2
  - make check
